Extract site name to localization

--- a/app/views/ideas/_sidebar.html.haml
+++ b/app/views/ideas/_sidebar.html.haml
@@ -1,6 +1,6 @@
 .sidebar
   = link_to 'New Idea', new_idea_path, class: 'button'
-  %p Submit your ideas for the Idea Site event here so attendees can begin thinking and planning for them. Other's will vote and review the ideas to help get the best ones.
+  %p Submit your ideas for the #{t(:site_name)} event here so attendees can begin thinking and planning for them. Other's will vote and review the ideas to help get the best ones.
   %h3.tertiary-heading We're Inspired By
   %ul.list
     %li= link_to 'SFpark', 'http://sfpark.org'
