--- a/app/views/pages/apis.html.haml
+++ b/app/views/pages/apis.html.haml
@@ -1,13 +1,13 @@
 .container
   .two
     %h2#provider.primary-heading APIs
-    %p The success of Idea Site will be driven, in large part, by the data and APIs available for event participants to use when building their apps.
+    %p The success of #{t(:site_name)} will be driven, in large part, by the data and APIs available for event participants to use when building their apps.
     %p After all, a hackathon is only as good as it’s data and API partners.
-    %p That’s where you can help to make Idea Site a resounding success – by contributing documentation and code samples for your APIs.
-    %p We’ve decided to use GitHub as an easy way for partners to document their APIs and contribute code samples for participants to use. If you want to provide information or code samples for participants to use at Idea Site, here’s what you need to do.
+    %p That’s where you can help to make #{t(:site_name)} a resounding success – by contributing documentation and code samples for your APIs.
+    %p We’ve decided to use GitHub as an easy way for partners to document their APIs and contribute code samples for participants to use. If you want to provide information or code samples for participants to use at #{t(:site_name)}, here’s what you need to do.
     %ul.list
       %li
-        From your GitHub account, #{link_to 'fork the Idea Site code samples and API repo', 'http://google.com'}.
+        From your GitHub account, #{link_to "fork the #{t(:site_name)} code samples and API repo", 'http://google.com'}.
       %li Create a new branch with your contact information or organization name.
       %li Create a folder to hold your documentation and/or code samples.
       %li Commit and push your changes back to Github.
