--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,7 +1,7 @@
 #hero
   = image_tag 'train-station-blur.jpg'
   .container.absolute
-    %h1.heading Idea Site
+    %h1.heading= t(:site_name)
     %p.leader
       Join us April 5
       %sup th
