--- a/app/views/contact/new.html.haml
+++ b/app/views/contact/new.html.haml
@@ -26,5 +26,5 @@
           = f.submit 'Send Message', class: 'submit'
   .one.last
     %h3.tertiary-heading Got a Question?
-    %p If you have a question about attending the event, sponsoring the event, or anything else related to Idea Site or getting around in Balitmore, let us know!
+    %p If you have a question about attending the event, sponsoring the event, or anything else related to #{t(:site_name)} or getting around in Balitmore, let us know!
     %p We're trying to change the way people get around. Get involved.
