--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -13,7 +13,7 @@
     %header
       .container.noclearfix
         %nav.left
-          = link_to 'Idea Site', root_path, :class => 'nav-item bold'
+          = link_to t(:site_name), root_path, :class => 'nav-item bold'
           = link_to 'Schedule + Location', schedule_path, :class => 'nav-item'
           = link_to 'Ideas', ideas_path, :class => 'nav-item'
           = link_to 'APIs', apis_path, :class => 'nav-item'
